--- a/src/patternfly/components/Icon/icon.scss
+++ b/src/patternfly/components/Icon/icon.scss
@@ -1,17 +1,48 @@
 // @debug $icon; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
-.#{$icon} {
+:root,
+:where(.#{$icon}) {
   // Sizes
   --#{$icon}--Width: 1em;
   --#{$icon}--Height: 1em;
-  --#{$icon}--m-sm--Width: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-sm--Height: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-md--Width: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-md--Height: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-lg--Width: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-lg--Height: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-xl--Width: var(--#{$pf-global}--icon--FontSize--xl);
-  --#{$icon}--m-xl--Height: var(--#{$pf-global}--icon--FontSize--xl);
+
+  // Standalone icon sizes
+  --#{$icon}--m-sm--Width: var(--pf-t--global--icon--size--sm);
+  --#{$icon}--m-sm--Height: var(--pf-t--global--icon--size--sm);
+  --#{$icon}--m-md--Width: var(--pf-t--global--icon--size--md);
+  --#{$icon}--m-md--Height: var(--pf-t--global--icon--size--md);
+  --#{$icon}--m-lg--Width: var(--pf-t--global--icon--size--lg);
+  --#{$icon}--m-lg--Height: var(--pf-t--global--icon--size--lg);
+  --#{$icon}--m-xl--Width: var(--pf-t--global--icon--size--xl);
+  --#{$icon}--m-xl--Height: var(--pf-t--global--icon--size--xl);
+  --#{$icon}--m-2xl--Width: var(--pf-t--global--icon--size--2xl);
+  --#{$icon}--m-2xl--Height: var(--pf-t--global--icon--size--2xl);
+  --#{$icon}--m-3xl--Width: var(--pf-t--global--icon--size--3xl);
+  --#{$icon}--m-3xl--Height: var(--pf-t--global--icon--size--3xl);
+
+  // Body sizes
+  --#{$icon}--m-body-sm--Width: var(--pf-t--global--icon--size--body--sm);
+  --#{$icon}--m-body-sm--Height: var(--pf-t--global--icon--size--body--sm);
+  --#{$icon}--m-body-default--Width: var(--pf-t--global--icon--size--body--default);
+  --#{$icon}--m-body-default--Height: var(--pf-t--global--icon--size--body--default);
+  --#{$icon}--m-body-lg--Width: var(--pf-t--global--icon--size--body--lg);
+  --#{$icon}--m-body-lg--Height: var(--pf-t--global--icon--size--body--lg);
+
+  // Heading sizes
+  --#{$icon}--m-heading-sm--Width: var(--pf-t--global--icon--size--heading--h6);
+  --#{$icon}--m-heading-sm--Height: var(--pf-t--global--icon--size--heading--h6);
+  --#{$icon}--m-heading-md--Width: var(--pf-t--global--icon--size--heading--h5);
+  --#{$icon}--m-heading-md--Height: var(--pf-t--global--icon--size--heading--h5);
+  --#{$icon}--m-heading-lg--Width: var(--pf-t--global--icon--size--heading--h4);
+  --#{$icon}--m-heading-lg--Height: var(--pf-t--global--icon--size--heading--h4);
+  --#{$icon}--m-heading-xl--Width: var(--pf-t--global--icon--size--heading--h3);
+  --#{$icon}--m-heading-xl--Height: var(--pf-t--global--icon--size--heading--h3);
+  --#{$icon}--m-heading-2xl--Width: var(--pf-t--global--icon--size--heading--h2);
+  --#{$icon}--m-heading-2xl--Height: var(--pf-t--global--icon--size--heading--h2);
+  --#{$icon}--m-heading-3xl--Width: var(--pf-t--global--icon--size--heading--h1);
+  --#{$icon}--m-heading-3xl--Height: var(--pf-t--global--icon--size--heading--h1);
+
+  // Inline sizes
   --#{$icon}--m-inline--Width: 1em;
   --#{$icon}--m-inline--Height: 1em;
 
@@ -20,21 +51,42 @@
 
   // Content color
   --#{$icon}__content--Color: initial;
-  --#{$icon}__content--m-danger--Color: var(--#{$pf-global}--danger-color--100);
-  --#{$icon}__content--m-warning--Color: var(--#{$pf-global}--warning-color--100);
-  --#{$icon}__content--m-success--Color: var(--#{$pf-global}--success-color--100);
-  --#{$icon}__content--m-info--Color: var(--#{$pf-global}--info-color--100);
-  --#{$icon}__content--m-custom--Color: var(--#{$pf-global}--custom-color--100);
+  --#{$icon}__content--m-danger--Color: var(--pf-t--global--color--status--danger--default);
+  --#{$icon}__content--m-warning--Color: var(--pf-t--global--color--status--warning--default);
+  --#{$icon}__content--m-success--Color: var(--pf-t--global--color--status--success--default);
+  --#{$icon}__content--m-info--Color: var(--pf-t--global--color--status--info--default);
+  --#{$icon}__content--m-custom--Color: var(--pf-t--global--color--status--custom--default);
   --#{$icon}--m-inline__content--Color: initial;
 
   // Content sizes
   --#{$icon}__content--FontSize: 1em;
-  --#{$icon}--m-sm__content--FontSize: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-md__content--FontSize: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-lg__content--FontSize: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-xl__content--FontSize: var(--#{$pf-global}--icon--FontSize--xl);
-  --#{$icon}--m-inline__content--FontSize: 1em;
 
+  // Standalone content sizes
+  --#{$icon}--m-sm__content--FontSize: var(--pf-t--global--icon--size--sm);
+  --#{$icon}--m-md__content--FontSize: var(--pf-t--global--icon--size--md);
+  --#{$icon}--m-lg__content--FontSize: var(--pf-t--global--icon--size--lg);
+  --#{$icon}--m-xl__content--FontSize: var(--pf-t--global--icon--size--xl);
+  --#{$icon}--m-2xl__content--FontSize: var(--pf-t--global--icon--size--2xl);
+  --#{$icon}--m-3xl__content--FontSize: var(--pf-t--global--icon--size--3xl);
+
+  // Body content sizes
+  --#{$icon}--m-body-sm__content--FontSize: var(--pf-t--global--icon--size--body--sm);
+  --#{$icon}--m-body-default__content--FontSize: var(--pf-t--global--icon--size--body--default);
+  --#{$icon}--m-body-lg__content--FontSize: var(--pf-t--global--icon--size--body--lg);
+
+  // Heading content sizes
+  --#{$icon}--m-heading-sm__content--FontSize: var(--pf-t--global--icon--size--heading--h6);
+  --#{$icon}--m-heading-md__content--FontSize: var(--pf-t--global--icon--size--heading--h5);
+  --#{$icon}--m-heading-lg__content--FontSize: var(--pf-t--global--icon--size--heading--h4);
+  --#{$icon}--m-heading-xl__content--FontSize: var(--pf-t--global--icon--size--heading--h3);
+  --#{$icon}--m-heading-2xl__content--FontSize: var(--pf-t--global--icon--size--heading--h2);
+  --#{$icon}--m-heading-3xl__content--FontSize: var(--pf-t--global--icon--size--heading--h1);
+
+  // Inline sizes
+  --#{$icon}--m-inline__content--FontSize: 1em;
+}
+
+.#{$icon} {
   position: relative;
   display: inline-flex;
   align-items: center;
@@ -56,7 +108,7 @@
     }
   }
 
-  // Size modifiers
+  // Standalone size modifiers
   &.pf-m-sm {
     --#{$icon}--Width: var(--#{$icon}--m-sm--Width);
     --#{$icon}--Height: var(--#{$icon}--m-sm--Height);
@@ -81,6 +133,75 @@
     --#{$icon}__content--FontSize: var(--#{$icon}--m-xl__content--FontSize);
   }
 
+  &.pf-m-2xl {
+    --#{$icon}--Width: var(--#{$icon}--m-2xl--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-2xl--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-2xl__content--FontSize);
+  }
+
+  &.pf-m-3xl {
+    --#{$icon}--Width: var(--#{$icon}--m-3xl--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-3xl--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-3xl__content--FontSize);
+  }
+
+  // Body size modifiers
+  &.pf-m-body-sm {
+    --#{$icon}--Width: var(--#{$icon}--m-body-sm--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-body-sm--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-body-sm__content--FontSize);
+  }
+
+  &.pf-m-body-default {
+    --#{$icon}--Width: var(--#{$icon}--m-body-default--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-body-default--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-body-default__content--FontSize);
+  }
+
+  &.pf-m-body-lg {
+    --#{$icon}--Width: var(--#{$icon}--m-body-lg--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-body-lg--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg__content--FontSize);
+  }
+
+  // Heading size modifiers
+  &.pf-m-heading-sm {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-sm--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-sm--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-sm__content--FontSize);
+  }
+
+  &.pf-m-heading-md {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-md--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-md--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-md__content--FontSize);
+  }
+
+  &.pf-m-heading-lg {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-lg--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-lg--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-lg__content--FontSize);
+  }
+
+  &.pf-m-heading-xl {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-xl--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-xl--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-xl__content--FontSize);
+  }
+
+  &.pf-m-heading-2xl {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-2xl--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-2xl--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-2xl__content--FontSize);
+  }
+
+  &.pf-m-heading-3xl {
+    --#{$icon}--Width: var(--#{$icon}--m-heading-3xl--Width);
+    --#{$icon}--Height: var(--#{$icon}--m-heading-3xl--Height);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-3xl__content--FontSize);
+  }
+
+  // Progress modifier
   &.pf-m-in-progress {
     --#{$icon}__content--Opacity: 0;
     --#{$icon}__progress--Opacity: 1;
@@ -96,7 +217,7 @@
     vertical-align: var(--#{$icon}__content--svg--VerticalAlign);
   }
 
-  // Size modifiers
+  // Standalone font size modifiers
   &.pf-m-sm {
     --#{$icon}__content--FontSize: var(--#{$icon}--m-sm__content--FontSize);
   }
@@ -111,6 +232,52 @@
 
   &.pf-m-xl {
     --#{$icon}__content--FontSize: var(--#{$icon}--m-xl__content--FontSize);
+  }
+
+  &.pf-m-2xl {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-2xl__content--FontSize);
+  }
+
+  &.pf-m-3xl {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-3xl__content--FontSize);
+  }
+
+  // Body font size modifiers
+  &.pf-m-body-sm {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-body-sm__content--FontSize);
+  }
+
+  &.pf-m-body-default {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-md__content--FontSize);
+  }
+
+  &.pf-m-body-lg {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg__content--FontSize);
+  }
+
+  // Heading font size modifiers
+  &.pf-m-heading-sm {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-sm__content--FontSize);
+  }
+
+  &.pf-m-heading-md {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-md__content--FontSize);
+  }
+
+  &.pf-m-heading-lg {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-lg__content--FontSize);
+  }
+
+  &.pf-m-heading-xl {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-xl__content--FontSize);
+  }
+
+  &.pf-m-heading-2xl {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-2xl__content--FontSize);
+  }
+
+  &.pf-m-heading-3xl {
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-heading-3xl__content--FontSize);
   }
 }
 
