feat(Card): fix title text button structure

--- a/src/patternfly/components/Card/card-title-text.hbs
+++ b/src/patternfly/components/Card/card-title-text.hbs
@@ -1,8 +1,3 @@
-{{#if card-title-text--IsButton}}
-  {{#> button button--type="button" button--IsLink=true button--IsInline=true button--modifier=(concat (pfv) 'card__title-text' )}}
-    {{{card-title-text--value}}}
-  {{/button}}
-{{else}}
 <{{#if card-title-text--element}}{{card-title-text--element}}{{else}}h2{{/if}} class="{{pfv}}card__title-text{{#if card-title-text--modifier}} {{card-title-text--modifier}}{{/if}}"
   {{#if card-title-text--id}}
     id="{{card-title-text--id}}"
@@ -10,10 +5,13 @@
   {{#if card-title-text--attribute}}
     {{{card-title-text--attribute}}}
   {{/if}}>
-  {{#if card-title-text--value}}
+  {{#if card-title-text--IsButton}}
+    {{#> button button--type="button" button--IsLink=true button--IsInline=true }}
+      {{{card-title-text--value}}}
+    {{/button}}
+  {{else if card-title-text--value}}
     {{{card-title-text--value}}}
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
 </{{#if card-title-text--element}}{{card-title-text--element}}{{else}}h2{{/if}}>
-{{/if}}
